# Matrix-Raspberry

./: .gitignore  AUTHORS  CMakeLists.txt  Makefile  README  README.md  matrix-mqtt.service  matrixd.service
arch/: PKGBUILD
daemon/: CMakeLists.txt  config.h.in  matrix-config.h.in  matrix-mqtt.service  matrix-webd.service  matrixd.service
daemon/mqtt/: CMakeLists.txt  matrix-mqtt
daemon/src/: SPI.c  graphics.c  main.c  matrix.c  matrix.h  tools.c
daemon/webserver/: CMakeLists.txt  matrix-webd
src/: 74hc595.c  74hc595.h  GPIO.c  GPIO.h  SPI.c  SPI.h  graphics.c  graphics.h  main.c  matrix.c  matrix.h  matrix_ll.h  tools.c  tools.h
webserver/: MatrixServer.py  static.html
